--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -3,6 +3,7 @@
   color: #fff;
   background-color: #28a745;
   border-color: #28a745;
+  outline: none;
   display: inline-block;
   font-weight: 400;
   text-align: center;
@@ -10,8 +11,11 @@
   vertical-align: middle;
   user-select: none;
   border: 1px solid transparent;
-  padding: 0.375rem 0.75rem;
-  font-size: 1rem;
+  padding: 0.375rem 3rem;
+  font-size: 1.4rem;
   line-height: 1.5;
   border-radius: 0.25rem;
+  @media (min-width: '768px') {
+    font-size: 1.8rem;
+  }
 }
