--- a/src/components/Dashboard/Dashboard.module.scss
+++ b/src/components/Dashboard/Dashboard.module.scss
@@ -8,3 +8,25 @@
     padding: 15px;
   }
 }
+
+.TitleBar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+  @media (min-width: '768px') {
+    margin-bottom: 40px;
+  }
+}
+
+.Title {
+  font-size: 20px;
+  font-weight: 700;
+  @media (min-width: '768px') {
+    font-size: 28px;
+  }
+}
+
+.Table {
+  width: 100%;
+}
