--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -11,7 +11,8 @@
   vertical-align: middle;
   user-select: none;
   border: 1px solid transparent;
-  padding: 0.375rem 3rem;
+  padding: 0.375rem 0;
+  width: 100px;
   font-size: 1.4rem;
   line-height: 1.5;
   border-radius: 0.25rem;
