--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -12,11 +12,17 @@
   user-select: none;
   border: 1px solid transparent;
   padding: 0.375rem 0;
-  width: 100px;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   line-height: 1.5;
   border-radius: 0.25rem;
+  width: 65px;
   @media (min-width: '768px') {
+    width: 100px;
+    padding: 0.375rem 0;
     font-size: 1.8rem;
+    max-width: 200px;
+  }
+  @media (min-width: '1200px') {
+    width: 150px;
   }
 }
