--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -4,7 +4,10 @@
   width: 100%;
   max-width: 1400px;
   margin: 0 auto;
-  padding: 30px 10px;
+  padding: 30px 5px;
+  @media (min-width: '425px') {
+    padding: 30px 10px;
+  }
   @media (min-width: '768px') {
     padding: 50px 20px;
   }
