--- a/src/components/Dashboard/ModalContent/ModalContent.module.scss
+++ b/src/components/Dashboard/ModalContent/ModalContent.module.scss
@@ -1,16 +1,18 @@
 .Wrapper {
   width: 100%;
-  max-width: 600px;
   margin: 0 auto;
-  padding: 20px;
 }
 
 .Title {
   font-size: 20px;
   font-weight: 700;
+  margin-bottom: 10px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #ccc;
 }
 
-Question {
+.Question {
   font-size: 16px;
   font-weight: 400;
+  margin-bottom: 10px;
 }
