--- a/src/components/UI/Modal/Modal.module.scss
+++ b/src/components/UI/Modal/Modal.module.scss
@@ -15,11 +15,12 @@
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1050;
-  /* width: 100%;
-  height: 100%; */
   overflow-x: hidden;
   overflow-y: auto;
   outline: 0;
+  width: 90%;
+  margin: 0 auto;
+  max-width: 600px;
 }
 
 .Modal {
